# Medical-multiagents

./: README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/app/: api.py  graph.py  schemas.py  state.py
backend/app/nodes/: diagnostic_agent.py  physician_review.py  report_agent.py  supervisor.py
backend/app/rag/: __init__.py  index_documents.py  retriever.py
backend/app/rag/medical_docs/: README.md
backend/app/services/: __init__.py  clinical_scoring.py  hitl_cache.py  monitoring.py  patient_memory.py  pdf_export.py  performance.py  safety.py
backend/app/tools/: care_tools.py  mcp_client.py  patient_tools.py
backend/mcp_server/: server.py
data/chroma_db/: chroma.sqlite3
data/medical_docs/: README.md  cardiaque.md  dermatologique.md  digestif.md  general.md  infectieux_febrile.md  musculo_articulaire.md  neurologique.md  orl.md  respiratoire.md  urinaire.md
frontend/: app.py
