[project]
name = "medical-multiagents-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "langchain-chroma>=1.1.0",
    "langgraph>=1.2.0",
    "langgraph-cli[inmem]>=0.4.26",
    "chromadb>=1.3.0",
    "fastmcp>=3.3.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.0",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
